[project]
name = "pymolpro"
dynamic = ["version"]
authors = [
    { name = "Peter Knowles", email = "knowlespj@cardiff.ac.uk" },
    { name = "Marat Sibaev" },
    { name = "Klaus Doll" },
]
description = "Python support for Molpro"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["numpy<2", "numgrid==2.1.1", "pysjef>=1.39", "scipy>=1.9.3", "chemcoord", "lxml", "pandas"]

[project.urls]
Homepage = "https://github.com/molpro/pymolpro"
Issues = "https://github.com/molpro/pymolpro/issues"
Documentation = "https://molpro.github.io/pymolpro"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel", "numgrid==2.1.1" ]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "pymolpro/_version.py"

[tool.setuptools]
package-dir = { "pymolpro" = "pymolpro"}
packages = ["pymolpro"]


[tool.setuptools-git-versioning]
enabled = true
