[project]
name = "pymolpro"
dynamic = ["version"]
authors = [
    { name = "Peter Knowles", email = "knowlespj@cardiff.ac.uk" },
    { name = "Marat Sibaev" },
    { name = "Klaus Doll" },
]
description = "Python support for Molpro"
readme = "README.rst"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["numpy", "pysjef>=1.42.3", "scipy>=1.9.3", "chemcoord", "lxml", "pandas", "quadpy>=0.16.10", "ase>=3.23.0"]

[project.urls]
Homepage = "https://github.com/molpro/pymolpro"
Issues = "https://github.com/molpro/pymolpro/issues"
Documentation = "https://molpro.github.io/pymolpro"

[project.scripts]
molpro_project = 'pymolpro.project:molpro_project'

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel", ]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "pymolpro/_version.py"

[tool.setuptools]
package-dir = { "pymolpro" = "pymolpro"}
packages = ["pymolpro"]


[tool.setuptools-git-versioning]
enabled = true
